tests/fmt_unused_arg.stderr
error: argument never used
 --> $DIR/fmt_unused_arg.rs:3:22
  |
3 | #[context("context", 1)]
  |           ---------  ^ argument never used
  |           |
  |           formatting specifier missing
